@@ -1,5 +1,15 @@
 2014-10-29  Lucas Forschler  <lforschler@apple.com>
 
+        Merge r175181
+
+    2014-10-24  Timothy Horton  <timothy_horton@apple.com>
+
+            Blindly try to fix all the builds.
+
+            * UIProcess/mac/WKActionMenuController.h:
+
+2014-10-29  Lucas Forschler  <lforschler@apple.com>
+
         Merge r175180
 
     2014-10-24  Timothy Horton  <timothy_horton@apple.com>
